<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateBcandidates extends Migration{
	public function up(){ 
 		Schema::create('bcandidates', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->Integer('code');
			$table->unsignedBigInteger('id_auser');
			$table->foreign('id_auser')->references('id')->on('ausers');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}