<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateCelectors extends Migration{
	public function up(){ 
 		Schema::create('celectors', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->Integer('code');
			$table->boolean('state');
			$table->String('mail');
			$table->unsignedBigInteger('id_auser');
			$table->foreign('id_auser')->references('id')->on('ausers');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}