<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateDpavilions extends Migration{
	public function up(){ 
 		Schema::create('dpavilions', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->Integer('code');
			$table->String('name');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}