<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateGvotes extends Migration{
	public function up(){ 
 		Schema::create('gvotes', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->Integer('code');
			$table->date('date');
			$table->unsignedBigInteger('id_bcandidate');
			$table->foreign('id_bcandidate')->references('id')->on('bcandidates');
			$table->unsignedBigInteger('id_fcabin');
			$table->foreign('id_fcabin')->references('id')->on('fcabins');
			
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}